# trustvault

./: .gitmodules  Cargo.toml  README.md  cloudformation.yaml  enclave-debug.Dockerfile  enclave-release.Dockerfile
.zed/: settings.json
enclave/: Cargo.toml
enclave/src/: aes256gcm.rs  cli.rs  crypto.rs  kmstool.rs  main.rs
host/: Cargo.toml
host/src/: main.rs
shared/: Cargo.toml
shared/src/: error.rs  transport.rs
