[workspace]
members = [
    "host",
    "enclave"
]
resolver = "3"
rust-version = "1.92.0"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio-vsock = "0.7"
tokio = {version = "1", features = ["full"]}
clap = {version = "4.5", features = ["derive"]}
rand = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
